crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__horizon__horizon__templatetags__angular.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/horizon/horizon/templatetags/angular.py
---
tag_rules:
  "horizon.templatetags.angular::tag::angular_templates":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: false
filter_arities:
  "horizon.templatetags.angular::filter::angular_escapes":
    expects_arg: false
    arg_optional: false
block_specs: {}
