crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__horizon__horizon__templatetags__sizeformat.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/horizon/horizon/templatetags/sizeformat.py
---
tag_rules: {}
filter_arities:
  "horizon.templatetags.sizeformat::filter::diskgbformat":
    expects_arg: false
    arg_optional: false
  "horizon.templatetags.sizeformat::filter::mb_float_format":
    expects_arg: false
    arg_optional: false
  "horizon.templatetags.sizeformat::filter::mbformat":
    expects_arg: false
    arg_optional: false
block_specs: {}
