crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__horizon__horizon__templatetags__splitfilter.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/horizon/horizon/templatetags/splitfilter.py
---
tag_rules: {}
filter_arities:
  "horizon.templatetags.splitfilter::filter::split_message":
    expects_arg: false
    arg_optional: false
block_specs: {}
