crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__horizon__horizon__templatetags__truncate_filter.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/horizon/horizon/templatetags/truncate_filter.py
---
tag_rules: {}
filter_arities:
  "horizon.templatetags.truncate_filter::filter::truncate":
    expects_arg: true
    arg_optional: false
block_specs: {}
